--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -78,8 +78,14 @@ parts:
       - file: source/contribute/debugging
         title: Debugging EvaDB
 
-      - file: source/contribute/new-command
+      - file: source/contribute/extend
         title: Extending EvaDB
+        sections:
+          - file: source/contribute/new-data-source
+            title: Structured Data Source Integration
+          - file: source/contribute/new-command
+            title: Operators
+
 
       - file: source/contribute/release
         title: Releasing EvaDB
