--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -18,6 +18,8 @@ parts:
         title: Image Search [FAISS]
       - file: source/usecases/qa-video.rst
         title: Q&A from Videos [ChatGPT + HuggingFace]
+      - file: source/usecases/food-review.rst
+        title: Sentiment Analysis and Response [ChatGPT + PostgreSQL]
       - file: source/usecases/02-object-detection.ipynb
         title: Object Detection
       - file: source/usecases/03-emotion-analysis.ipynb
