--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,7 +242,7 @@ jobs:
     resource_class: large
     docker:
       # https://circleci.com/docs/circleci-images#language-image-variants
-      - image: "cimg/python:<< parameters.v >>"-node
+      - image: "cimg/python:<< parameters.v >>-node"
     steps:
 
       - checkout
