--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -250,7 +250,7 @@ jobs:
       # Restore pip wheel
       - restore_cache:
           keys:
-            - v1-pip-wheel_cache-python<< parameters.v >>-{{ checksum "docs/requirements.txt" }}
+            - v1-pip-wheel_cache-python<< parameters.v >>-{{ checksum "docs/requirements.txt" }}-{{ checksum "package-lock.json" }}
 
       - run:
           name: Install EvaDB Doc dependencies
@@ -259,7 +259,7 @@ jobs:
             source test_evadb_doc/bin/activate
             pip install --upgrade pip
             pip install -r docs/requirements.txt 
-            npm install -g markdown-link-check
+            npm install markdown-link-check
 
       - run:
           name: Test doc build and link validation
@@ -269,9 +269,10 @@ jobs:
             bash script/test/test.sh -m "<< parameters.mode >>"
 
       - save_cache:
-          key: v1-pip-wheel_cache-python<< parameters.v >>-{{ checksum "docs/requirements.txt" }}
+          key: v1-pip-wheel_cache-python<< parameters.v >>-{{ checksum "docs/requirements.txt" }}-{{ checksum "package-lock.json" }}
           paths:
             - test_evadb_doc
+            - node_modules
 
   Postgres:
     parameters:
