Revamp getting started.  (#1016)
Inspired by https://ludwig.ai/latest/getting_started/.

Topics will be covered in this PR: 

- Installation Guide
- Integrate Data Source
- USE SQL API
- CREATE DATABASE SQL API

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -7,6 +7,8 @@ parts:
         sections:
           - file: source/overview/getting-started/install-guide
             title: Installation Guide
+          - file: source/overview/getting-started/data-source
+            title: Integrate Data Source
       - file: source/overview/concepts
         #- file: source/overview/faq
 
@@ -50,6 +52,12 @@ parts:
           - file: source/reference/evaql/insert
           - file: source/reference/evaql/delete
           - file: source/reference/evaql/rename
+          - file: source/reference/evaql/use
+
+      - file: source/reference/databases/index
+        title: Data Sources
+        sections: 
+          - file: source/reference/databases/postgres 
 
       - file: source/reference/udfs/index
         title: Models
