--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -9,6 +9,8 @@ parts:
             title: Installation Options
       - file: source/overview/connect-to-database
         title: Connect to Database
+      - file: source/overview/model-inference
+        title: Model inference
       - file: source/overview/concepts
         title: Concepts
         #- file: source/overview/faq
@@ -75,6 +77,9 @@ parts:
             title: Custom Model
           - file: source/reference/udfs/model-train
             title: Model Train/Finetune
+
+      - file: source/reference/optimizations
+        title: Optimizations
         
 
       # - file: source/reference/io
