fix gitignore that excludes unnecessary folders

--- a/.gitignore
+++ b/.gitignore
@@ -205,8 +205,13 @@ dep.txt
 *eva_data/
 *evadb_data/
 
-# models
+# models, but not apply to codebase
 models/
+!evadb/models
+!evadb/catalog/models
+!test/unit_tests/models
+!test/unit_tests/catalog/models
+
 
 # test files
 test.py
