--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -91,11 +91,8 @@ parts:
       - file: source/benchmarks/text_summarization.rst
         title: Text Summarization
 
-  - caption: Developer Guide
+  - caption: Developer Reference
     chapters:
-      - file: source/dev-guide/architecture
-        title: Architecture Design of EvaDB
-
       - file: source/dev-guide/contribute
         title: Contributing to EvaDB
         sections:
@@ -132,4 +129,7 @@ parts:
           - file: source/dev-guide/release/pypi-account
             title: Setup PyPI Account
           - file: source/dev-guide/release/release-steps
-            title: How to Release
+            title: Release Guide
+
+      - file: source/dev-guide/architecture
+        title: Architecture Diagram
