Forecasting in EVA (#969)
Implemented standalone forecasting in EVA (using
[statsforecast](https://nixtla.github.io/statsforecast) package). You
can run it via the following commands:

```sql
DROP TABLE IF EXISTS AirData;

CREATE TABLE AirData (
    unique_id TEXT(30),
    ds TEXT(30),
    y INTEGER);

LOAD CSV 'data/forecasting/air-passengers.csv' INTO AirData;

DROP UDF IF EXISTS Forecast;

CREATE UDF Forecast
FROM (SELECT unique_id, ds, y FROM AirData)
TYPE Forecasting
'predict' 'y';

SELECT Forecast(12) FROM AirData;
```
Here `Forecast(12)` signifies a horizon length of `12`.

Thanks!

---------

Co-authored-by: xzdandy <xzdandy@gmail.com>

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -66,6 +66,8 @@ parts:
         sections:
           - file: source/reference/ai/model-train
             title: Model Training
+          - file: source/reference/udfs/model-forecasting
+            title: Time Series Forecasting
           - file: source/reference/ai/hf
             title: Hugging Face
           - file: source/reference/ai/openai
