--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -57,6 +57,7 @@ parts:
           - file: source/reference/databases/postgres
           - file: source/reference/databases/sqlite
           - file: source/reference/databases/mysql
+          - file: source/reference/databases/mariadb
 
       - file: source/reference/ai/index
         title: AI Engines
