Add model inference documentation (#1030)
This documentation shows case the flexibility of EvaDB's declarative
language, and variety of task we can accomplish.

A brief introduction to the optimization in EvaDB. Will populate more
details over time when optimization features become stable.

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -9,6 +9,8 @@ parts:
             title: Installation Options
       - file: source/overview/connect-to-database
         title: Connect to Database
+      - file: source/overview/model-inference
+        title: Model inference
       - file: source/overview/concepts
         title: Concepts
         sections:
@@ -77,6 +79,9 @@ parts:
             title: YOLO 
           - file: source/reference/ai/custom
             title: Custom Model
+
+      - file: source/reference/optimizations
+        title: Optimizations
         
       # - file: source/reference/io
       #   title: IO Descriptors
