--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,19 +8,25 @@ on:
       - evadb/version.py
 
 jobs:
-  release:
+  sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install env.
+        run: |
+          python -m venv test_evadb
+          source test_evadb/bin/activate
+          pip install --upgrade pip
+          pip install ".[dev]"
       - name: Check revision version.
         run: |
+          source test_evadb/bin/activate
           cmd=$(python -c "from evadb.version import _REVISION; print(_REVISION if 'dev' not in _REVISION else 'skip')")
       - name: Sync master and staging.
         run: |
           if [[ "$cmd" != "skip" ]]; then
-            git_hash=$(git rev-parse --short "${{ github.sha }}")
+            git pull
             git checkout master
-            git reset --hard $git_hash
+            git reset --hard ${{ github.sha }}
             git push -f origin master
           fi
-
